# HW_Qt

./: CMakeLists.txt  Dockerfile  README.md  cheking.h  fileworker.h  hw_bmstu.cpp  hw_bmstu.h
